# gyruss-hs

./: gyruss.cabal  stack.yaml
src/: Game.hs  Main.hs
